--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,15 @@ body {
 	color: grey;
 }
 
-@media screen (max-width: 500px) {
+@media only screen and (max-width: 1100px) {
+
 	.content {
-		width: 50%;
-		height: 50%;
+		top: 0;
+		left: 50%;
+		margin-top: 105px;
+		margin-left: -145px;
+		width: 300px;
+		height: 350px;
 	}
+
 }
